# ChangeLog for app-editors/editra
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/editra/ChangeLog,v 1.25 2012/02/20 08:07:33 dirtyepic Exp $

*editra-0.6.89 (20 Feb 2012)

  20 Feb 2012; Ryan Hill <dirtyepic@gentoo.org> -editra-0.6.58.ebuild,
  +editra-0.6.89.ebuild:
  Version bump.

*editra-0.6.76 (02 Oct 2011)

  02 Oct 2011; Ryan Hill <dirtyepic@gentoo.org> -editra-0.6.26.ebuild,
  -editra-0.6.48.ebuild, +editra-0.6.76.ebuild:
  Version bump. Remove old.

*editra-0.6.58 (25 Jul 2011)

  25 Jul 2011; Ryan Hill <dirtyepic@gentoo.org> +editra-0.6.58.ebuild:
  Version bump.

*editra-0.6.48 (03 Jul 2011)

  03 Jul 2011; Ryan Hill <dirtyepic@gentoo.org> -editra-0.6.0.ebuild,
  -editra-0.6.20.ebuild, +editra-0.6.48.ebuild:
  Version bump.

*editra-0.6.26 (21 Mar 2011)

  21 Mar 2011; Ryan Hill <dirtyepic@gentoo.org> +editra-0.6.26.ebuild:
  Version bump. "This is a quick bug fix for a critical issue that could cause
  Editra to not be able to properly start again after part of the profile
  settings became corrupted."

*editra-0.6.20 (27 Feb 2011)

  27 Feb 2011; Ryan Hill <dirtyepic@gentoo.org> -editra-0.5.86.ebuild,
  -editra-0.5.99.ebuild, +editra-0.6.20.ebuild:
  Version bump.

*editra-0.6.0 (16 Jan 2011)

  16 Jan 2011; Ryan Hill <dirtyepic@gentoo.org> +editra-0.6.0.ebuild:
  Version bump.

*editra-0.5.99 (08 Dec 2010)

  08 Dec 2010; Ryan Hill <dirtyepic@gentoo.org> -editra-0.5.72.ebuild,
  +editra-0.5.99.ebuild:
  Version bump.

*editra-0.5.86 (25 Oct 2010)

  25 Oct 2010; Ryan Hill <dirtyepic@gentoo.org> +editra-0.5.86.ebuild:
  Version bump.

  11 Oct 2010; Ryan Hill <dirtyepic@gentoo.org>
  -files/editra-0.5.32-sandbox.patch, -editra-0.5.51.ebuild,
  -editra-0.5.60.ebuild:
  Remove old.

*editra-0.5.72 (27 Jun 2010)

  27 Jun 2010; Ryan Hill <dirtyepic@gentoo.org> +editra-0.5.72.ebuild:
  Version bump. Improved HTML/XML autoindent and autocomp. Bug fixes.

*editra-0.5.60 (22 May 2010)
