@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/editra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/editra/ChangeLog,v 1.25 2012/02/20 08:07:33 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/editra/ChangeLog,v 1.26 2012/02/28 11:44:59 patrick Exp $
+
+  28 Feb 2012; Patrick Lauer <patrick@gentoo.org> editra-0.6.76.ebuild,
+  editra-0.6.89.ebuild:
+  Restricting jython
 
 *editra-0.6.89 (20 Feb 2012)
 
